# bitprim-server

./: .gitignore  .travis-BITPRIM.yml  .travis.yml  CMakeLists.txt  README-BITPRIM.md  README.md  bitprim-serverConfig.cmake.in  configure.ac  install.sh  libbitcoin-serverConfig.cmake.in
console/: executor.cpp  executor.hpp
include/bitcoin/server/: configuration.hpp  server_node.hpp
include/bitcoin/server/interface/: blockchain.hpp
include/bitcoin/server/services/: block_service.hpp  transaction_service.hpp
include/bitcoin/server/workers/: notification_worker.hpp
src/: parser.cpp  server_node.cpp
src/interface/: address.cpp  blockchain.cpp
src/services/: transaction_service.cpp
src/workers/: notification_worker.cpp
